test/TestSuite/Scheduler/Errors/overbooked_length.tjp
project "Test" 2011-06-24 +1m

resource r "R"

# MARK: warning 6 overbooked_length
task "T" {
  allocate r
  length 1d
  booking r 2011-06-24-9:00 +8h,
            2011-06-27-9:00 +1h
}
